# Android-LuaJavax

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/lua/: TestErrorMessageForJavaMethodCall.lua  setup.lua
app/src/main/java/com/bennyhuo/luajavax/sample/: MainActivity.kt
app/src/main/java/com/bennyhuo/luajavax/sample/cases/: LuaTests.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
luajava/: build.gradle  build.gradle.kts  proguard-rules.pro
luajava/src/main/: AndroidManifest.xml
luajava/src/main/java/org/keplerproject/luajava/: LuaJavaAPI.java  LuaStateFactory.java
luajava/src/main/jni/: Application.mk  CMakeLists.txt
luajava/src/main/jni/lua/: Android.mk  ldebug.c  lobject.c  lobject.h
luajava/src/main/jni/luajava/: log.h  luajava.c
luajavax/: build.gradle  build.gradle.kts  proguard-rules.pro
luajavax/src/main/: AndroidManifest.xml
luajavax/src/main/java/com/bennyhuo/luajavax/: LuaFactory.kt
luajavax/src/main/java/com/bennyhuo/luajavax/annotations/: LuaApi.java
luajavax/src/main/java/com/bennyhuo/luajavax/core/: DummyLua.kt  ILua.kt  Lua.kt
luajavax/src/main/java/com/bennyhuo/luajavax/log/: AndroidLog.kt
luajavax/src/main/java/com/bennyhuo/luajavax/utils/: IO.kt
luajavax/src/main/res/values/: strings.xml
luajavax/src/test/java/com/bennyhuo/luajavax/: ExampleUnitTest.java
